# datahub_omni_connector

./: .coverage  .gitignore  OMNI_ATLAN_PARITY_PLANNING.md  README.md  conftest.py  pyproject.toml  skills-lock.json
docs/sources/omni/: README.md
omni_source/: __init__.py  config.py  omni_api.py  report.py  source.py
recipes/: omni_recipe.yml
tests/: test_lineage_parser.py  test_source_behavior.py
tests/integration/omni/: omni_mces_golden.json  test_omni_integration.py
